# t_vector

./: .coveragerc  .gitignore  CHANGELOG.md  CHANGELOG_TEMPLATE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.jupyterhub  MODEL_ERROR_MATRIX.md  MONKEY_PATCH_GOVERNANCE.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  SECURITY_MODEL_LOADING_CHECKLIST.md  SHIM_RETIREMENT_PLAN.md  TESTING_ROADMAP.md  UI_IMPLEMENTATION_GUIDE.md  app.py  app_apply.py  app_apply_service.py  app_apply_view.py  app_apply_view_ctk.py  app_apply_workflow.py  app_cluster.py  app_cluster_pipeline.py  app_cluster_service.py  app_cluster_state_adapter.py  app_cluster_view.py  app_cluster_view_ctk.py  app_cluster_workflow.py  app_deps.py  app_dialogs_ctk.py  app_logger.py  app_train.py  app_train_service.py  app_train_view.py  app_train_view_ctk.py  app_train_workflow.py  apply_prediction_service.py  artifact_contracts.py  (+78 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: codeql.yml  mutation-score.yml  nightly-perf.yml  quality-gates.yml  weekly-quality-scan.yml
bank_reason_trainer/: __init__.py  __main__.py  cli.py
ci/: mutation_smoke.py  perf_baseline.json  perf_check.py
config/: __init__.py  exclusions.py  ml_constants.py  model_config.py  paths.py  user_config.py
core/: __init__.py  feature_builder.py  hw_profile.py  ml_core.py  text_utils.py
ctk_migration_pack/: MIGRATION.md  README.md  app_apply_view_ctk.py  app_cluster_view_ctk.py  app_train_view_ctk.py  bootstrap_ctk_demo.py  requirements.txt  ui_theme_ctk.py
docs/: BUNDLE_LIFECYCLE.md  DEPLOY.md  DEVELOPER_GUIDE.md  JUPYTERHUB_UI.md  QUICKSTART_PUTTY.md  QUICKSTART_WEB_UI.md  WEB_MIGRATION_PLAN.md  artifact_extension_policy.md  run_report_schema.md  runtime_decrypt_policy.md  ui_refactor_plan.md
docs/adr/: 0001-layered-architecture.md  0002-pipeline-stages-and-snapshots.md  0003-frozen-run-state.md  0004-offline-llm-fallback.md  0005-sbom-and-signed-releases.md  0006-mutation-testing.md  0007-wave5-quality-polish.md  0008-reproducible-builds.md  0009-web-only-ui.md
notebooks/: ui.ipynb
patterns/: __init__.py  dialog.py  noise.py  stop_words.py
tests/: conftest.py  test_all_compat.py  test_app_apply_service.py  test_app_logger.py  test_app_mixins_import_smoke.py  test_app_workflows_smoke.py  test_apply_prediction_service.py  test_apply_presenter.py  test_architecture_boundaries.py  test_artifact_contracts.py  test_artifact_extension_policy.py  test_auto_k_service.py  test_bootstrap_and_utils.py  test_bundle_compat_fixtures.py  test_bundle_compat_regression.py  test_calibration_paths.py  test_cli_entrypoint.py  test_cluster_algo_strategy.py  test_cluster_architecture_boundaries.py  test_cluster_cancel.py  test_cluster_elbow_selector.py  test_cluster_export_service.py  test_cluster_golden_fixture.py  test_cluster_hdbscan_reclust_service.py  test_cluster_incremental.py  test_cluster_incremental_bundle_contract.py  test_cluster_keywords_service.py  test_cluster_llm_provider_defaults.py  test_cluster_model_loader.py  test_cluster_naming_service.py  test_cluster_pipeline.py  test_cluster_pipeline_new_snap_keys.py  test_cluster_pipeline_perf_smoke.py  test_cluster_pipeline_smoke.py  test_cluster_processing_guard.py  test_cluster_quality_service.py  test_cluster_run_coordinator.py  test_cluster_run_stages.py  test_cluster_run_state_slots.py  test_cluster_state_adapter.py  (+72 more)
tests/fixtures/bundle_specs/: train_v0_legacy.json  train_v1_valid.json  train_v2_future.json
tests/fixtures/clustering/: README.md  three_blobs_k3.json
ui/tabs/: apply_presenter.py
ui_widgets/: __init__.py  apply_panel.py  cluster_panel.py  io.py  notebook_app.py  predictions_table.py  progress.py  session.py  theme.py  train_panel.py  trust_prompt.py
ui_widgets/dialogs/: __init__.py  artifacts.py  history.py  settings.py
utils/: __init__.py  excel_utils.py  t5_summarizer.py
