[project]
name = "classification-tool"
version = "9.0.0"
description = "BankReasonTrainer — классификатор причин обращений"
requires-python = ">=3.11,<3.14"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",   # длинные строки в UI и tooltip-текстах — допустимы
    "E741",   # ambiguous variable names (l, O, I) — встречаются в ML-коде
    "UP007",  # Optional[X] vs X | None — оставляем совместимость с 3.9
    # B-rules (bugbear): widespread-but-intentional patterns in this codebase
    "B008",   # function call in default argument (common Python idiom for factories)
    "B904",   # raise-without-from in except — too widespread, tracked separately
    "B905",   # zip-without-strict — sklearn / numpy idioms don't benefit
    "B007",   # unused loop variable (OK for readability with explicit names)
    "B023",   # function uses loop variable (intentional in ML closures)
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
warn_unused_ignores = true

# Постепенное включение strict-mypy по модулям.
# Начинаем с «ядра контрактов» + изолированных ML-утилит, не тянущих за собой
# тяжёлые импорты. Расширяем постепенно (см. CLAUDE.md). Wave 5 target: ≥25.
[[tool.mypy.overrides]]
module = [
    "workflow_contracts",
    "artifact_contracts",
    "ml_compat",
    "ml_core",
    # ml_sbert_bootstrap отложен в следующую волну — требует чистки 11 type-issues
    # (Generic list, attr-defined torch.__version__, _OrigVer как base class, ...).
    "ml_distillation",
    "llm_reranker",
    "cluster_workflow_service",
    "app_train_service",
    "bank_reason_trainer.cli",
    "bank_reason_trainer.__init__",
]
strict = true
follow_imports = "silent"

# ---------------------------------------------------------------------------
# Bandit — security scanner
# ---------------------------------------------------------------------------
# `bandit -c pyproject.toml -r . --exclude ./tests,./ci,./fixtures -ll`
[tool.bandit]
exclude_dirs = ["tests", "ci", "fixtures", "build", "dist", ".git"]
skips = [
    "B101",  # assert in tests is fine
    "B110",  # try-except-pass — best-effort resource cleanup (annotated sites)
    "B404",  # subprocess import — used in bootstrap_run.py legitimately
    "B603",  # subprocess without shell=True — we already avoid shell=True
    "B607",  # subprocess partial path — explicit python interpreter is intended
    "B311",  # random for non-security contexts (sampling, jitter) — documented
    "B301", "B403",  # pickle via joblib — loads gated by SHA-256 TrustStore
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Coverage is gated in CI only (quality-gates.yml) with --cov=. --cov-branch
# --cov-fail-under=50. Local runs stay fast (coverage ≈5-10× overhead with
# branch tracking). See docs/adr/0006-mutation-testing.md.
addopts = "--tb=short -q"
filterwarnings = [
    # После Wave 5 миграции legacy-kwargs → TrainingOptions(...) не должно
    # оставаться ни одного DeprecationWarning из ml_training в тестах.
    "error::DeprecationWarning:ml_training",
]
# `slow` зарезервирован под долгие тесты (см. CONTRIBUTING.md);
# unit/integration удалены — в коде ни одного применения.
markers = [
    "slow: long-running tests",
]

[tool.pip-compile]
output-file = "requirements.lock"
